--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           name: "credentials.json"
           json: ${{ secrets.CREDENTIALS }}
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v4
       - name: DJ Time
         run: |
           python3 main.py
